--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "googleapis": "^59.0.0",
     "http-errors": "~1.6.3",
     "is-empty": "^1.2.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4"
   }
 }
